fixed all alignments

--- a/idb/static/css/app.css
+++ b/idb/static/css/app.css
@@ -1,5 +1,5 @@
 body {
-    min-height: 500px;
+    min-height: 300px;
     padding-top: 50px;
     background-image: url(../images/concrete-seamless.png);
     background-color: #333333;
@@ -7,10 +7,9 @@ body {
 }
 
 #headerwrap {
-    background: url(../images/concrete-splash.png) no-repeat center top;
-    width: 90%;
-    margin-left: 5%;
-
+    background: url(../images/concrete-splash.png) no-repeat bottom;
+    width: 100%;
+    height: 70%;
 }
 
 #header {
